src/test/resources/keycloak/oauth/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
       requestPrincipals: ["*"]
